--- a/tabletop/board/templates/board/index.html
+++ b/tabletop/board/templates/board/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.html' %}
+{% load static %}
 <body>
-    stuff
-</body>
+    {% block 'body' %}
+    <div class="playing-field" id="playing-field">
+    </div>
+    <script src="{% static 'frontend/tabletop.js' %}"></script>
+    {% endblock %}
+  </body>
 </html>
