--- a/tabletop/templates/base.html
+++ b/tabletop/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,12 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabletop</title>
-  {% load static %}
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
+  <link rel="stylesheet" href="{% static 'frontend/tabletop.css' %}">
 </head>
 
 <body>
-  {% block body %}
+  {% block 'body' %}
   {% endblock %}
 </body>
 
