--- a/tabletop/templates/base.html
+++ b/tabletop/templates/base.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="{% url 'password_change' %}">Change Password</a>
+    <a href="{% url 'logout' %}">Log out</a>
+  </div> 
   {% block 'body' %}
   {% endblock %}
 </body>
